# OpenTimelineIO

./: CMakeLists.txt
src/opentimelineio/: composition.cpp  composition.h
tests/benchmarks/: CMakeLists.txt  composition_benchmark.cpp
